--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 			</div>
 			<div class="icons">
 				<hr class="nameHr">
-				<a href="https://github.com/AaronZhang314" target="_blank" class="icon">
+				<a href="https://github.com/aa-zhang" target="_blank" class="icon">
 					<img src="images/github.png" height="25" width="auto">
 				</a>
-				<a href="https://devpost.com/AaronZhang314" target="_blank" class="icon">
+				<a href="https://devpost.com/aa-zhang" target="_blank" class="icon">
 					<img src="images/devpost.png" height="25" width="auto">
 				</a>
 			</div>
