Change Coding Buddies Link

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 					<div class="row"> 
 						<div class="col-md-4 wow fadeIn colEqualHeight" data-wow-delay="0.2s">
 							<div class="project shadow">
-								<a href="https://aaronzhang314.github.io/CodingBuddies/index.html" target="_blank"">
+								<a href="https://aa-zhang.github.io/CodingBuddies/index.html" target="_blank"">
 									<img src="images/coding.png" class="img-fluid">
 									<h4>Coding Buddies</h4>
 									<p>A learning resource that teaches Python for younger programmers.</p>
