--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 						<div class="col-md-8 wow fadeIn" data-wow-delay="0.5s">
 							<h2>A Little About Me!</h2>
 							<hr class="headerLine blueHr wow slideInLeft">
-							<p>Hi, I am Aaron Zhang! Currently, I am a first-year student attending the University of Toronto (St. George) for Computer Science. My passion for software development has grown over the recent years as I love to express my creativity through a variety of projects, such as developing games, designing websites, and tackling real-world issues at hackathons.</p>
+							<p>Hi, I am Aaron Zhang! I am a second-year student in the Computer Science Specialist program at the University of Toronto (St. George). My passion for software development has grown over the recent years as I love to express my creativity through a variety of projects, such as developing games, designing websites, and tackling real-world issues at hackathons.</p>
 						</div>
 						<div class="col-md-4">
-							<img src="images/profile1.jpg" id="me" class="wow rotateInDownRight shadow" data-wow-duration="1s">
+							<img src="images/IMG_3243.jpg" id="me" class="wow rotateInDownRight shadow" data-wow-duration="1s">
 						</div>
 					</div>
 					<div id="projects" class="wow fadeIn" data-wow-delay="0.5s">
@@ -172,7 +172,7 @@
 					</div>
 					
 					<div id="more" class="wow fadeIn" data-wow-delay="0.5s" style="padding-bottom:150px">
-						<h2>Fun Facts!</h2>
+						<h2>Some Random Facts</h2>
 						<hr class="headerLine greenHr wow slideInLeft">
 						<p>I <i>really</i> enjoy learning to play many different kinds of instruments!</p>
 						<p>These instruments include the...</p>
