Fixed Profile Picture

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							<p>Hi, I am Aaron Zhang! I am a second-year student in the Computer Science Specialist program at the University of Toronto (St. George). My passion for software development has grown over the recent years as I love to express my creativity through a variety of projects, such as developing games, designing websites, and tackling real-world issues at hackathons.</p>
 						</div>
 						<div class="col-md-4">
-							<img src="images/IMG_3243.jpg" id="me" class="wow rotateInDownRight shadow" data-wow-duration="1s">
+							<img src="images/profile3.JPG" id="me" class="wow rotateInDownRight shadow" data-wow-duration="1s">
 						</div>
 					</div>
 					<div id="projects" class="wow fadeIn" data-wow-delay="0.5s">
