--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.2.2/web-animations.min.js"></script>
 
 	<script>
-	  	new WOW().init();
+		window.onload = new WOW().init();
 	 </script>
 	<title>Aaron Zhang</title>
 </head>
